 14/01/2005: Now the partition algorithm recolor the vertices between 1 and 16 (previously 0-15) and the colors  names are diplayed in the message window.
 14/01/2005: added an algorithm to color connected components (int TopologicalGraph::ColorConnectedComponents()).
14/01/2005: Corrected a bug occurring while forcing the computation of the map of a tree.
04/02/2005: Corrected a bug occurring while drawing a not connected bipartite graph by contact of segments.
04/02/2005: Dual graphs  and angle graphs are only computed for connected planar graphs.
10/02/2005: Improved ClientServer programs
	