@@ -2,14 +2,16 @@ struct _Action  {const char* name;int num;};
 static _Action actions[]={
 {"PAUSE",(99)},
 {"CONNECT",(A_AUGMENT+1)},
-{"BICONNECT",(A_AUGMENT+2)},
-{"BICONNECT_6",(A_AUGMENT+3)},
-{"BICONNECT_NP",(A_AUGMENT+4)},
-{"TRIANGULATE_V",(A_AUGMENT+5)},
-{"TRIANGULATE_ZZ",(A_AUGMENT+6)},
-{"TRIANGULATE_3C",(A_AUGMENT+7)},
-{"QUADRANGULATE_V",(A_AUGMENT+8)},
-{"BISSECT_ALL_E",(A_AUGMENT+9)},
+{"CONNECT_V",(A_AUGMENT+2)},
+{"BICONNECT",(A_AUGMENT+3)},
+{"BICONNECT_6",(A_AUGMENT+4)},
+{"BICONNECT_NP",(A_AUGMENT+5)},
+{"BICONNECT_NP_V",(A_AUGMENT+6)},
+{"TRIANGULATE_V",(A_AUGMENT+7)},
+{"TRIANGULATE_ZZ",(A_AUGMENT+8)},
+{"TRIANGULATE_3C",(A_AUGMENT+9)},
+{"QUADRANGULATE_V",(A_AUGMENT+10)},
+{"BISSECT_ALL_E",(A_AUGMENT+11)},
 {"SCHNYDER_E",(A_EMBED+1)},
 {"SCHNYDER_V",(A_EMBED+2)},
 {"FPP_FARY",(A_EMBED+3)},
